--- a/index.html
+++ b/index.html
@@ -7,7 +7,20 @@
     <link rel="icon" href="icons/favicon.ico">
   </head>
   <body>
-    <h1>Hi I'm Javier</h1>
-    <p>Full Stack Web Developer</p>
+
+    <div class="top-container">
+      <h1>Hi I'm Javier.</h1>
+      <p>A Full Stack Web Developer.</p>
+    </div>
+
+    <div class="middle-container">
+
+
+    </div>
+
+    <div class="bottom-container">
+
+    </div>
+
   </body>
 </html>
