--- a/index.html
+++ b/index.html
@@ -9,8 +9,11 @@
   <body>
 
     <div class="top-container">
+      <img src="images/cloud.png" alt="cloud-img">
       <h1>Hi I'm Javier.</h1>
-      <p>A Full Stack Web Developer.</p>
+      <p>A <span class="pro">Pro</span>grammer</p>
+      <img src="images/cloud.png" alt="cloud-img">
+      <img src="images/mountain.png" alt="mountain">
     </div>
 
     <div class="middle-container">
