--- a/index.html
+++ b/index.html
@@ -5,24 +5,53 @@
     <title>Javier Banuelos</title>
     <link rel="stylesheet" href="css/styles.css">
     <link rel="icon" href="icons/favicon.ico">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Merriweather&family=Montserrat&family=Sacramento&display=swap" rel="stylesheet">
   </head>
   <body>
 
     <div class="top-container">
-      <img src="images/cloud.png" alt="cloud-img">
+      <img class="top-cloud" src="images/cloud.png" alt="cloud-img">
       <h1>Hi I'm Javier.</h1>
       <p>A <span class="pro">Pro</span>grammer</p>
-      <img src="images/cloud.png" alt="cloud-img">
+      <img class="bottom-cloud" src="images/cloud.png" alt="cloud-img">
       <img src="images/mountain.png" alt="mountain">
     </div>
 
     <div class="middle-container">
-
-
+      <div class="profile">
+        <img class="circle-border" src="https://pbs.twimg.com/profile_images/829763182038183936/03u-3CTT_400x400.jpg" alt="Javier Banuelos">
+        <h2>Hello.</h2>
+        <p>I am a full stack web developer, engineer, and gamer. Please enjoy my portfolio!</p>
+      </div>
+      <hr>
+      <div class="skills">
+        <h2>My Skills.</h2>
+        <div class="skill-row">
+          <img class="circle-border" src="https://giphy.com/gifs/memecandy-PiQejEf31116URju4V" alt="Coding">
+          <h3>Skill 1</h3>
+          <p>This is my first skill</p>
+        </div>
+        <div class="skill-row">
+          <img class="circle-border" src="https://giphy.com/gifs/dreamworks-mood-lets-do-this-i-got-you-fUSX3E4imAn9WHwrCV" alt="Kung Fu">
+          <h3>skill 2</h3>
+          <p>This is my second skill</p>
+        </div>
+      </div>
+      <hr>
+      <div class="contact-me">
+        <h2>Get In Touch</h2>
+        <h3>Lorem ipsum dolor sit amet, non elit.</h3>
+        <p>Lorem ipsum dolor sit amet, in quis, aenean amet. Phasellus sodales, tellus donec dui, ornare erat.</p>
+        <a class="btn" href="mailto:name@email.com">CONTACT ME</a>
+      </div>
     </div>
 
-    <div class="bottom-container">
 
+    <div class="bottom-container">
+      <a class="footer-link" href="https://www.linkedin.com/">LinkedIn</a>
+      <a class="footer-link" href="https://twitter.com/">Twitter</a>
+      <p>© 2020 Javier Banuelos.</p>
     </div>
 
   </body>
