Changes to HTML and CSS
Added in actual content for the webpage including images for the skills and real descriptions. CSS was further refined to provide a much more palatable website. <hr> was given style, the skill rows were given floats and clears, the footer was given style and formatting. A button was added to create a method to contact me.

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class="top-container">
       <img class="top-cloud" src="images/cloud.png" alt="cloud-img">
       <h1>Hi I'm Javier.</h1>
-      <p>A <span class="pro">Pro</span>grammer</p>
+      <h2>A <span class="pro">Pro</span>grammer</h2>
       <img class="bottom-cloud" src="images/cloud.png" alt="cloud-img">
       <img src="images/mountain.png" alt="mountain">
     </div>
@@ -22,36 +22,51 @@
       <div class="profile">
         <img class="circle-border" src="https://pbs.twimg.com/profile_images/829763182038183936/03u-3CTT_400x400.jpg" alt="Javier Banuelos">
         <h2>Hello.</h2>
-        <p>I am a full stack web developer, engineer, and gamer. Please enjoy my portfolio!</p>
+        <p class="my-summary">I am a full stack web developer, engineer, and gamer. Please enjoy my portfolio!</p>
       </div>
+
       <hr>
+
       <div class="skills">
         <h2>My Skills.</h2>
         <div class="skill-row">
-          <img class="circle-border" src="https://giphy.com/gifs/memecandy-PiQejEf31116URju4V" alt="Coding">
-          <h3>Skill 1</h3>
-          <p>This is my first skill</p>
+          <img class="code-image" src="images/codingImage.gif" alt="Coding">
+          <h3>Web Development</h3>
+          <p class="coding-skill-description">
+            While I graduated with a degree in Mechanical Engineering, my heart
+            always pulled me to coding/Computer Science. My one regret is not officially making the switch.
+            When UCSD presented the opportunity to join a coding boot camp, I was all too eager to take up the offer.
+            I have since been dedicated to honing my craft and enjoying every second of it!
+          </p>
         </div>
         <div class="skill-row">
-          <img class="circle-border" src="https://giphy.com/gifs/dreamworks-mood-lets-do-this-i-got-you-fUSX3E4imAn9WHwrCV" alt="Kung Fu">
-          <h3>skill 2</h3>
-          <p>This is my second skill</p>
+          <img class="kungFu-image" src="images/kungFu.gif" alt="Kung Fu">
+          <h3>Martial Arts</h3>
+          <p class="ma-skill-description">
+            Ever since I started Karate in first grade I was hooked! While there were long periods between different
+            styles, thus far I've studied Karate, Tae Kwon Do, FMA, Choi Lai Fut, and Wing Chun. Choi Lai Fut is my
+            preferred style and one that I've studied the longest, though a brief move made those classes inaccessable.
+            That's where I picked up Wing Chun. I have since been out of practice for some time, but looking to pick up again!
+          </p>
         </div>
       </div>
+
       <hr>
+
       <div class="contact-me">
         <h2>Get In Touch</h2>
-        <h3>Lorem ipsum dolor sit amet, non elit.</h3>
-        <p>Lorem ipsum dolor sit amet, in quis, aenean amet. Phasellus sodales, tellus donec dui, ornare erat.</p>
-        <a class="btn" href="mailto:name@email.com">CONTACT ME</a>
+        <h3>If you love coding, and gaming as much as I do!</h3>
+        <p>I'm a huge nerd and love talking about all things nerdy, reach out so we can connect!</p>
+        <a class="contact-me-btn" href="mailto:jbanuelos00@gmail.com">CONTACT ME</a>
       </div>
     </div>
 
 
     <div class="bottom-container">
-      <a class="footer-link" href="https://www.linkedin.com/">LinkedIn</a>
-      <a class="footer-link" href="https://twitter.com/">Twitter</a>
-      <p>© 2020 Javier Banuelos.</p>
+      <a class="footer-link" href="https://www.linkedin.com/in/javier-banuelos-a9091261/">LinkedIn</a>
+      <a class="footer-link" href="https://twitter.com/TheNerd_Man">Twitter</a>
+      <a class="footer-link" href="https://jbanuelos00.github.io/cssMyPage/">My Website</a>
+      <p class="footer-copyright">© 2020 Javier Banuelos.</p>
     </div>
 
   </body>
