Modified index.html and styles.css
Index.html saw a change in the class of the button from "contact-me-btn" to just "btn." Styles.css saw the line-height property move to the "body" tag. The paddings for the containers, paragraphs, and anchor tags was changed slightly. "a:hover" was added in, as well as "font-style" for the anchor tags.

--- a/index.html
+++ b/index.html
@@ -56,8 +56,8 @@
       <div class="contact-me">
         <h2>Get In Touch</h2>
         <h3>If you love coding, and gaming as much as I do!</h3>
-        <p>I'm a huge nerd and love talking about all things nerdy, reach out so we can connect!</p>
-        <a class="contact-me-btn" href="mailto:jbanuelos00@gmail.com">CONTACT ME</a>
+        <p class="contact-message">I'm a huge nerd and love talking about all things nerdy, reach out so we can connect!</p>
+        <a class="btn" href="mailto:jbanuelos00@gmail.com">CONTACT ME</a>
       </div>
     </div>
 
